archapp/static/archapp/css/my.css
html, body, .container {
  height: 100%;
}
body > .container {
  height: auto;
  min-height: 100%;
}

.container-config {
  margin-bottom: 10px;
}
.content {
  color: #242C2F;
}
.header {
  background: #C3D7DF;
}
.footer {
    bottom: 0px;
    width: auto;
    height: 20px;
    background-color: #C3D7DF;
}
.site_name {
    margin: auto;
    font-weight: bold;
    color: #67727A;
}
.btn-color {
    color: #6991AC;
}
.btn-border-color {
    border-color: #C3D7DF;
}
.btn-postion {
    position: relative;
    right: 5px;
}
.logo {
    color: #6991AC;
    font-weight: bold;
    margin-top: 5px;
    margin-bottom: 5px;
    border: 0px;
}
.signature {
    color: #6991AC;
}
.padding {
  padding-top: 15px;
}
.background {
  background-color: #F5F5F5;
}

.text-gr {
  color: #535859;
}
.html-height,.body-height {
  height: 100%;
}

.pull-me{
  -webkit-box-shadow: 0 0 8px #FFD700;
  -moz-box-shadow: 0 0 8px #FFD700;
  box-shadow: 0 0 8px #FFD700;
  cursor:pointer;
}
.pull-me {
  display:block;
  position:relative;
  right:-25px;
  width:150px;
  height:20px;
  font-family:arial,sans-serif;
  font-size:14px;
  color:#ffffff;
  background:#cc0000;
  text-decoration:none;
  -moz-border-bottom-left-radius:5px;
  -moz-border-bottom-right-radius:5px;
  border-bottom-left-radius:5px;
  border-bottom-right-radius:5px;
}
.pull-me p {
  text-align:center;
}

.map-preview {
  height: 250px;
  width: 250px;
  margin-top: 15px;
  margin-bottom: 15px;
}
.bibliography {
  white-space: pre-line;
}

.site-preview {
  margin-bottom: 15px;
  margin-top: 10px;
}
.gallery {
  margin-bottom: 10px;
  margin-top: 10px;
}
.gallery-box {
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: #447391;
  border-radius: 2px;
}
.gallery-img {
  display: block;
  margin: auto;
}
.control-left-radius{
  border-radius: 2px;
}
.control-right-radius{
  border-radius: 2px;
}
.form-custom {
  height: 28px;
  font-size: 12px;
  padding: 3px 12px;
}
.form-group-custom {
  margin-bottom: 5px;
}
.form-box {
  background: #FFF;
  border-radius: 2px;
  box-shadow: 0px 1px 0px 0px #D7D8DB, 0px 0px 0px 1px #E3E4E8;
  padding-top: 10px;
  padding-bottom: 10px;
}
.margin-top {
  margin-top: 10px;
}
/*!
 *  * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
 *   * Code licensed under the Apache License v2.0.
 *    * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 *     */

  /* Toggle Styles */

  #wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
  }

  #wrapper.toggled {
    padding-left: 250px;
  }

  #sidebar-wrapper {
    z-index: 1000;
    position: absolute;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    color: #ffffff;
    background: #447391;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
  }

  #wrapper.toggled #sidebar-wrapper {
    width: 250px;
  }

  #page-content-wrapper {
    width: 100%;
    position: absolute;
    padding: 15px;
  }

  #wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
  }

  /* Sidebar Styles */

  .sidebar-nav {
    position: absolute;
    right: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
  }

  .sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
  }

  .sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999999;
  }

  .sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
  }

  .sidebar-nav li a:active,
  .sidebar-nav li a:focus {
    text-decoration: none;
  }

  .sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
  }

  .sidebar-nav > .sidebar-brand a {
    color: #999999;
  }

  .sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
  }

  @media(min-width:768px) {
    #wrapper {
      padding-left: 250px;
    }

    #wrapper.toggled {
      padding-left: 0;
    }

    #sidebar-wrapper {
      width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
      width: 0;
    }

    #page-content-wrapper {
      padding: 20px;
      position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
      position: relative;
      margin-right: 0;
    }
  }

.nopadding {
  padding-right:0;
  padding-left:0;
}

.mbottom {
  margin-bottom: 15px;
  margin-top: 15px;
}


#slider {
  padding-left:70px;
  padding-right:100px;
  margin-left:0px;
}
#id_undefined {
  width: 1.2em;
  height: 1.2em;
  outline: none;
}
/*Geolocation*/
.geo-map {
  height: 500px;
}

#floating-panel {
  border: 2px solid #C3D7DF;
  left: 500px;
  width: 45%;
  background: white;
  position: relative;
  bottom: 480px;
  z-index: 5;
  padding: 5px;
  text-align: center;
  font-family: 'Roboto','sans-serif';
  line-height: 30px;
  padding-left: 10px;
}
.avatar {
  width: 350px;
}
#id_dating {
  border:0px;
  background-color: #F5F5F5;
}

.multi-item-carousel .carousel-inner > .item {
  -webkit-transition: 500ms ease-in-out left;
  transition: 500ms ease-in-out left;
}
.multi-item-carousel .carousel-inner .active.left {
  left: -33%;
}
.multi-item-carousel .carousel-inner .active.right {
  left: 33%;
}
.multi-item-carousel .carousel-inner .next {
  left: 33%;
}
.multi-item-carousel .carousel-inner .prev {
  left: -33%;
}
@media all and (transform-3d), (-webkit-transform-3d) {
  .multi-item-carousel .carousel-inner > .item {
    -webkit-transition: 500ms ease-in-out all;
    transition: 500ms ease-in-out all;
    -webkit-backface-visibility: visible;
    backface-visibility: visible;
    -webkit-transform: none!important;
    transform: none!important;
  }
}
.multi-item-carousel .carouse-control.left,
.multi-item-carousel .carouse-control.right {
  background-image: none;
}

